feat: add promo section

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,41 @@
 </head>
 
 <body>
-    <h1>НАШИ ПРЕИМУЩЕСТВА</h1>
+    <section class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="logo/logo.png" alt="logo">
+                </a>
+                <div class="header__distributor">
+                    <div class="header__suptext">Официальный представитель</div>
+                    <div class="header__subtext">Garmin, Polar, Suunto</div>
+                </div>
+                <div class="header__contact">
+                    <a href="tel:+" class="header__number">+7 (499) 922-89-74</a>
+                    <button class="btn btn-default header__btn">заказать звонок</button>
+                </div>
+            </header>
+            <h1 class="title promo__title">Подбор пульсометра</h1>
+            <h2 class="title promo__subtitle">с учётом Вашего уровня подготовки</h2>
+            <div class="promo__wrapper">
+                <div class="promo__item">
+                    <img src="icon/promo/watch_icon.png" alt="watch" class="promo__img">
+                    <div class="promo__descr">Время подбора: <br>10 минут</div>
+                </div>
+                <div class="promo__item">
+                    <img src="icon/promo/cart_icon.png" alt="cart" class="promo__img">
+                    <div class="promo__descr">Бесплатная <br>доставка</div>
+                </div>
+                <div class="promo__item">
+                    <img src="icon/promo/messages_icon.png" alt="messages" class="promo__img">
+                    <div class="promo__descr">Ответим<br> на все вопросы</div>
+                </div>
+            </div>
+            <button class="btn btn-order promo__btn">заказать консультацию</button>
+            <div class="promo__link">или <a href="http://">перейти в каталог</a></div>
+        </div>
+    </section>
 </body>
 
 </html>
