--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,36 @@
             <div class="promo__link">или <a href="http://">перейти в каталог</a></div>
         </div>
     </section>
+    <section class="advantages">
+        <div class="container">
+            <h2 class="title advantages__title">наши преимущества</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <img src="icon/advantage/cup_icon.png" alt="cup">
+                    <h3 class="title">Делимся опытом</h3>
+                    <p>Наши сотрудники всегда готовы поделиться своим опытом,<br> так как сами бегают полумарафоны,
+                        переплыли Босфор, готовятся к
+                        соревнованиям по триатлону!</p>
+                </div>
+                <div class="advantages__item">
+                    <img src="icon/advantage/heart_icon.png" alt="heart">
+                    <h3 class="title">Заботимся о здоровье</h3>
+                    <p>Мы работаем для того, <br>чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в
+                        радость
+                        Вам и Вашим близким!</p>
+                </div>
+                <div class="advantages__item">
+                    <img src="icon/advantage/shoe_icon.png" alt="shoe">
+                    <h3 class="title">Учим бегать</h3>
+                    <p>Помогаем с обучением <br> правильной технике бега!<br> Дружим с крупнейшей школой бега в России
+                        -
+                        <span>I LOVE
+                            RUNNING.</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
