--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="header__contact">
                     <a href="tel:+" class="header__number">+7 (499) 922-89-74</a>
-                    <button class="btn btn-default header__btn">заказать звонок</button>
+                    <button class="btn btn_default">заказать звонок</button>
                 </div>
             </header>
             <h1 class="title promo__title">Подбор пульсометра</h1>
@@ -42,7 +42,7 @@
                     <div class="promo__descr">Ответим<br> на все вопросы</div>
                 </div>
             </div>
-            <button class="btn btn-order promo__btn">заказать консультацию</button>
+            <button class="btn btn_order promo__btn">заказать консультацию</button>
             <div class="promo__link">или <a href="http://">перейти в каталог</a></div>
         </div>
     </section>
@@ -74,6 +74,18 @@
                     </p>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="consultation">
+        <div class="container">
+            <h2 class="title consultation__title">Получите бесплатную консультацию по подбору пульсометра</h2>
+            <p class="consultation__text">Просто заполните форму заявки<br> и мы перезвоним вам в течении 10 минут</p>
+            <form action="#" class="form">
+                <input required type="text" name="name" id="name" placeholder="Ваше имя" class="form__name">
+                <input required type="tel" name="tel" id="tel" placeholder="Ваш телефон" class="form__number">
+                <input required type="email" name="email" id="email" placeholder="Ваш E-mail" class="form__email">
+                <button type="submit" class="btn btn_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
         </div>
     </section>
 </body>
